Done retrieving single worker

--- a/templates/home.html
+++ b/templates/home.html
@@ -166,7 +166,7 @@ input[type="checkbox"] {
             <!-- Kitchen Cleaning -->
             <div class="col-md-4 mb-3">
                 <label class="card service-card gryffindor shadow p-3">
-                    <input type="checkbox" name="services" value="Kitchen">
+                    <input type="checkbox" name="services" value="Kitchen Cleaning">
                     <img src="https://img.icons8.com/color/96/000000/kitchen.png" class="card-img-top w-50 mx-auto pt-3" />
                     <div class="card-body">
                         <h5 class="card-title">Kitchen Cleaning</h5>
@@ -176,7 +176,7 @@ input[type="checkbox"] {
             <!-- Floor Cleaning -->
             <div class="col-md-4 mb-3">
                 <label class="card service-card slytherin shadow p-3">
-                    <input type="checkbox" name="services" value="Floor">
+                    <input type="checkbox" name="services" value="Floor Cleaning">
                     <img src="https://img.icons8.com/color/96/000000/broom.png" class="card-img-top w-50 mx-auto pt-3" />
                     <div class="card-body">
                         <h5 class="card-title">Floor Cleaning</h5>
@@ -186,7 +186,7 @@ input[type="checkbox"] {
             <!-- AC Service -->
             <div class="col-md-4 mb-3">
                 <label class="card service-card ravenclaw shadow p-3">
-                    <input type="checkbox" name="services" value="AC">
+                    <input type="checkbox" name="services" value="AC Repair">
                     <img src="https://img.icons8.com/color/96/000000/air-conditioner.png" class="card-img-top w-50 mx-auto pt-3" />
                     <div class="card-body">
                         <h5 class="card-title">AC Service</h5>
