--- a/templates/available_employees.html
+++ b/templates/available_employees.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+
 {% block content %}
 <div class="container mt-5">
     <h2 class="text-center mb-4">Available Employees</h2>
@@ -24,4 +25,7 @@
     {% endif %}
 </div>
 {% endblock %}
+
 {% block scripts %}
+<!-- Optional: Add JavaScript here -->
+{% endblock %}
