--- a/template/home.html
+++ b/template/home.html
@@ -65,7 +65,7 @@
       padding: 5px 0;
     }
     header {
-      background: linear-gradient(90deg, #000000, #8b6a00);
+      background: linear-gradient(90deg,#D69ADE ,#FFDFEF);
     }
     header h3 {
       font-weight: bold;
@@ -98,6 +98,13 @@
       border: none;
       color: #1c1c1c;
     }
+    .btn-black:disabled {
+      background-color: #ccc !important;
+      color: #666 !important;
+      cursor: not-allowed;
+      opacity: 0.8;
+    }
+
     .btn-light:hover {
       background-color: #e6c556;
     }
