more changes done

--- a/templates/check-out.html
+++ b/templates/check-out.html
@@ -9,10 +9,14 @@
     body {
       background: #fdfaf5;
       font-family: 'Segoe UI', sans-serif;
+      background-image: url("static/urban_wash.jpg");
     }
+    
+    
     header {
-      background: linear-gradient(90deg, #000000, #8b6a00);
-      color: white;
+      background: linear-gradient(to right, #0d63c0, #0ad379);
+      color: black;
+      font-weight: bold;
     }
     footer {
       background-color: #000;
@@ -26,13 +30,15 @@
       padding: 20px;
     }
     .card-box {
-      background-color: white;
+      background-color: rgba(225, 224, 224, 0.539);
       border-radius: 12px;
       padding: 20px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
       flex: 1;
     }
     .tip-btn {
+      color:black;
+      border-color: #000;
       margin: 5px;
     }
     .amount {
@@ -49,8 +55,8 @@
 
   <!-- Header -->
   <header class="p-3 d-flex justify-content-between align-items-center">
-    <h3 class="m-0">NeatNest</h3>
-    <span>Urban Cleaning Checkout</span>
+    <h2 class="m-0">NeatNest</h2>
+    <span>NeatNest Cleaning Checkout</span>
   </header>
 
   <!-- Main Content -->
