--- a/templates/register.html
+++ b/templates/register.html
@@ -5,6 +5,23 @@
   <title>Register - Urban Cleaning</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
+<style>
+  body {
+    background-image: url("static/clean.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .card {
+    background-color: rgba(243, 240, 240, 0.902); /* Slightly transparent card */
+    border-radius: 15px;
+    
+  }
+</style>
 <body class="bg-light">
   <div class="container mt-5 col-md-6">
     <div class="card shadow">
