--- a/templates/login.html
+++ b/templates/login.html
@@ -4,9 +4,26 @@
   <meta charset="UTF-8">
   <title>Login - Urban Cleaning</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <style>
+    body {
+      background-image: url("static/reg.jpg");
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    .card {
+      background-color: rgba(243, 240, 240, 0.902); /* Slightly transparent card */
+      border-radius: 15px;
+      
+    }
+  </style>
 </head>
-<body class="bg-light">
-  <div class="container mt-5 col-md-6">
+<body>
+  <div class="container col-md-6">
     <div class="card shadow">
       <div class="card-body">
         <h3 class="text-center mb-4">Login</h3>
