--- a/templates/home.html
+++ b/templates/home.html
@@ -113,46 +113,9 @@
     <div>
       <input class="form-control d-inline w-auto me-2" list="places" placeholder="Choose place">
       <datalist id="places">
-        <option value="Adyar">
-        <option value="T. Nagar">
-        <option value="Velachery">
-        <option value="Anna Nagar">
-        <option value="Tambaram">
-        <option value="Nungambakkam">
-        <option value="Mylapore">
-        <option value="Guindy">
-        <option value="Kodambakkam">
-        <option value="Saidapet">
-        <option value="Porur">
-        <option value="Vadapalani">
-        <option value="Thiruvanmiyur">
-        <option value="Royapettah">
-        <option value="Egmore">
-        <option value="Perambur">
-        <option value="Pallavaram">
-        <option value="Ashok Nagar">
-        <option value="K.K. Nagar">
-        <option value="Thoraipakkam">
-        <option value="Ambattur">
-        <option value="Kolathur">
-        <option value="Avadi">
-        <option value="Poonamallee">
-        <option value="Chromepet">
-        <option value="Sholinganallur">
-        <option value="Besant Nagar">
-        <option value="Alandur">
-        <option value="Triplicane">
-        <option value="Teynampet">
-        <option value="Manapakkam">
-        <option value="Medavakkam">
-        <option value="Koyambedu">
-        <option value="Arumbakkam">
-        <option value="Vandalur">
-        <option value="Iyyappanthangal">
-        <option value="Kotturpuram">
-        <option value="Ramapuram">
-        <option value="Mogappair">
-        <option value="Villivakkam">
+        {% for place in places %}
+          <option value="{{ place }}">
+        {% endfor %}
       </datalist>
       
       
