provided min value for date input

--- a/templates/home.html
+++ b/templates/home.html
@@ -149,7 +149,7 @@
     <!-- Cart -->
     <div class="col-3 border p-3">
       <h6>Select Date and Time</h6>
-      <input type="date" id="dateInput" class="form-control mb-2">
+      <input type="date" id="dateInput" class="form-control mb-2" min="{{ today }}">
       <select id="timeInput" class="form-select mb-2">
         <option value="">-- Choose Time Slot --</option>
         <option value="8:00 AM - 10:00 AM">8:00 AM - 10:00 AM</option>
